# UniClipboard

./: .autocorrectrc  .coderabbit.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  Cargo.toml  DOMAIN_GLOSSARY_ZH.md  DOMAIN_REARCH_ZH.md  MEMBERSHIP_MIGRATION_PLAN_ZH.md  README.md  README_ZH.md  SECURITY.md  TRUSTED_PEER_DOMAIN_ZH.md  VISION.md  codecov.yml  docker-compose.seq.yml  eslint.config.js  findings.md  openapi-ts.config.ts  package-lock.json  package.json  progress.md  rust-toolchain.toml  skills-lock.json  slice2-phase1-plan.md  slice2-phase2-plan.md  slice2-phase3-plan.md  slice3-phase1-plan.md  task_plan.md  tsconfig.json  updater.html  vite.config.ts
apps/cli/: AGENTS.md  Cargo.toml  README.md
apps/cli/src/: local_daemon.rs  main.rs  output.rs  setup_check.rs
apps/cli/src/commands/: app_session.rs  blob.rs  debug.rs  dev.rs  devices.rs  dump_clipboard.rs  get.rs  init.rs  invite.rs  join.rs  members.rs  mod.rs  probe.rs  recv.rs  search.rs  seed_clipboard.rs  send.rs  start.rs  status.rs  stop.rs  switch_space.rs  upgrade.rs  watch.rs
apps/daemon/: Cargo.toml
apps/daemon/src/daemon/: app.rs  app_facade_assembly.rs  bootstrap.rs  handle.rs  host.rs  oneshot.rs  process_bootstrap.rs  process_runtime.rs  run_loop.rs  runtime_assembly.rs  search_assembly.rs  service_plan.rs  startup_recovery.rs  state.rs
crates/uc-bootstrap/: Cargo.toml
crates/uc-bootstrap/src/: analytics.rs  assembly.rs  background_tasks.rs  builders.rs  config.rs  file_transfer_lifecycle.rs  init.rs  lib.rs  network_policy.rs  non_gui_runtime.rs  space_setup.rs  task_registry.rs  tracing.rs
crates/uc-bootstrap/src/entrypoint/: cli.rs  daemon.rs  mod.rs  non_gui.rs
crates/uc-bootstrap/src/layer/: mod.rs  paths.rs  platform.rs
crates/uc-bootstrap/src/observability/: host_event.rs  mod.rs  tracing.rs
crates/uc-bootstrap/src/startup/: mod.rs  pending_import.rs  reconcile.rs
crates/uc-bootstrap/src/subsystem/: analytics.rs  blob_tasks.rs  file_transfer.rs  mod.rs  sync_engine.rs
crates/uc-bootstrap/src/wiring/: deps.rs  mod.rs  network_policy.rs  wire.rs
crates/uc-bootstrap/tests/: config_migration_round_trip_e2e.rs  mdns_only_pairing_e2e.rs  slice1_handshake_e2e.rs  slice2_phase1_presence_e2e.rs  slice2_phase2_clipboard_e2e.rs
crates/uc-bootstrap/tests/common/: mod.rs
crates/uc-daemon-client/: Cargo.toml
crates/uc-daemon-client/src/: http_ws_service.rs  lib.rs  service.rs
crates/uc-daemon-client/src/http/: analytics.rs  clipboard.rs  config.rs  diagnostics.rs  enveloped.rs  lifecycle.rs  mobile_sync.rs  mod.rs  query.rs  search.rs  settings.rs  setup.rs  setup_v2.rs  upgrade.rs
crates/uc-daemon-client/src/setup/: mod.rs  parsed_state.rs
crates/uc-daemon-process/: AGENTS.md  Cargo.toml
crates/uc-daemon-process/src/: contract.rs  handover.rs  process_metadata.rs  socket.rs  spawn.rs  spawn_contract.rs  timing.rs  win_console.rs  win_process.rs
crates/uc-infra/: Cargo.toml
crates/uc-infra/migrations/2026-04-11-000001_create_search_index/: up.sql
crates/uc-infra/migrations/2026-04-17-000001_create_file_transfer_events/: down.sql  up.sql
crates/uc-infra/migrations/2026-04-18-000001_create_space_member/: down.sql
crates/uc-infra/migrations/2026-04-19-000001_create_trusted_peer/: down.sql
crates/uc-infra/migrations/2026-04-20-000001_drop_paired_device/: down.sql  up.sql
crates/uc-infra/migrations/2026-04-20-000002_create_peer_address/: up.sql
crates/uc-infra/migrations/2026-04-24-000001_create_blob_reference/: down.sql
crates/uc-infra/migrations/2026-04-27-000001_create_clipboard_migration_backup/: up.sql
crates/uc-infra/migrations/2026-05-05-000001_create_mobile_device/: down.sql  up.sql
crates/uc-infra/migrations/2026-06-19-000001_create_active_clipboard_register/: down.sql  up.sql
crates/uc-infra/migrations/2026-06-20-000001_rename_active_register_content_hash/: down.sql  up.sql
crates/uc-infra/migrations/2026-06-25-000001_add_entry_favorite/: down.sql  (+1 more)
crates/uc-infra/src/: lib.rs  setup_status.rs
crates/uc-infra/tests/: lan_only_relay_mode.rs
crates/uc-mobile/: Cargo.toml
crates/uc-mobile-proto/: Cargo.toml
crates/uc-mobile-proto/src/: app_settings.rs  clipboard_doc.rs  connect_uri.rs  file_state.rs  hash.rs  history_log.rs  history_record.rs  lib.rs  loop_guard.rs  multipart.rs  net_class.rs  payload_cache.rs  persist_keys.rs  server_config.rs  sync_engine.rs
crates/uc-mobile/ios-demo/: main.swift
crates/uc-mobile/scripts/: build-android-aar.sh  build-ios-xcframework.sh  run-b2-daemon-demo.sh  run-ios-demo.sh
crates/uc-mobile/src/: client.rs  lib.rs  reducer.rs
crates/uc-mobile/tests/: init_gate.rs
src-tauri/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs  clippy.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/crates/p2p-bench/: Cargo.toml
src-tauri/crates/uc-app/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-app-paths/: Cargo.toml
src-tauri/crates/uc-application/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-bootstrap/: Cargo.toml
src-tauri/crates/uc-cli/: AGENTS.md  Cargo.toml  README.md
src-tauri/crates/uc-cli-macros/: Cargo.toml
src-tauri/crates/uc-clipboard-probe/: Cargo.toml
src-tauri/crates/uc-core/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-daemon/: Cargo.toml
src-tauri/crates/uc-daemon-client/: Cargo.toml
src-tauri/crates/uc-daemon-contract/: Cargo.toml
src-tauri/crates/uc-daemon-local/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-daemon-process/: Cargo.toml
src-tauri/crates/uc-desktop/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-infra/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-observability/: Cargo.toml
src-tauri/crates/uc-platform/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-tauri/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-webserver/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/tests/: crate_boundaries.rs
src-tauri/tests/e2e/: Cargo.toml
src-tauri/windows/: installer-hooks.nsh
(+3209 files in other folders)
