# Tauri packaging shell. The cargo workspace lives at the repo root
# Cargo.toml; this is a plain package manifest for the desktop app bin.
[package]
name = "uniclipboard"
version = "0.17.0-alpha.4"
license.workspace = true
description = "一个剪切板同步工具"
authors = ["mkdir700@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uniclipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri shell entry — bin crate hands control to uc-tauri, which owns all
# Tauri-specific plumbing (commands, plugins, builder/setup, run loop) and
# pulls uc-bootstrap transitively for context construction.
uc-tauri = { path = "crates/uc-tauri" }

# Required for the tauri::generate_context!() macro the bin still calls.
tauri = { workspace = true }

# Tauri plugin crates listed here so `tauri-build` can validate capability
# permission identifiers against them at compile time. The plugins are
# initialized inside `uc_tauri::run`, not directly in this bin.
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
# Native save/open file dialogs for config import/export (issue #1110). Must be
# listed here too — not only in uc-tauri — because `tauri-build` discovers a
# plugin's permission manifest (`dialog:default`) from the bin crate's *direct*
# dependencies; reaching it transitively through uc-tauri is not enough.
tauri-plugin-dialog = "2"

# tauri::generate_context!() expands to code that references serde_json by path.
serde_json = "1"

[features]
cargo-clippy = []
# 启用后默认使用 "dev" profile（数据目录后缀 `-dev`、keychain service 后缀 `-dev`）。
# 仅供 `bun tauri:build:dev` 使用，避免本地 dev 构建产物覆盖 prod 安装的数据。
dev-profile = ["uc-tauri/dev-profile"]
# Tauri 的 production webview 加载开关：开了才会用 `tauri://localhost` 协议从
# 嵌入的 `frontendDist` 读 index.html / assets；关掉的话即便 cargo `--release`
# 也仍走 `devUrl`（tauri.conf.json 里是 http://localhost:1420），结果是 snap
# 包跑出来 webview 显示 "Could not connect to localhost: Connection refused"。
# `tauri-cli`（`bun run tauri build`）会自动把这个 feature 打开，但 snap.yml
# 绕过 tauri-cli 直接 cargo build，因此必须在这里手动通过
# `--features custom-protocol` 启用。
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
