[package]
name = "uc-cli"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Command-line interface for UniClipboard"

[[bin]]
name = "uniclip"
path = "src/main.rs"

[features]
# Enables in-process diagnostic commands (blob, dev, probe, seed-clipboard,
# dump-clipboard, mobile-sync debug, file-send) that pull in the full
# application + bootstrap + platform stack. Not needed for the thin
# daemon-client CLI; release builds omit this feature to shed iroh/diesel/
# libsqlite3-sys from the binary.
dev-tools = [
    "dep:uc-bootstrap",
    "dep:uc-application",
    "dep:uc-platform",
    "dep:uuid",
]

[dependencies]
uc-observability = { path = "../../crates/uc-observability" }
uc-core = { path = "../../crates/uc-core" }
uc-daemon-client = { path = "../../crates/uc-daemon-client" }
uc-daemon-contract = { path = "../../crates/uc-daemon-contract" }
# ADR-008 P5-0: the process-management primitives (process_metadata / socket /
# spawn / spawn_contract) the CLI uses now live in this thin crate.
uc-daemon-process = { path = "../../crates/uc-daemon-process" }
# Thin path-resolution policy (app_data_root, profile suffix, portable mode).
# Used by the lightweight setup-status check that avoids pulling uc-bootstrap's
# full assembly stack just to read a single JSON file.
uc-app-paths = { path = "../../crates/uc-app-paths" }

# --- Heavy optional deps (only pulled by `dev-tools` feature) ---------------
uc-bootstrap = { path = "../../crates/uc-bootstrap", optional = true }
uc-application = { path = "../../crates/uc-application", optional = true }
# Hidden `probe` subcommand group reads/writes the OS clipboard directly
# (replaces the standalone `clipboard-probe` binary). Diagnostic only.
uc-platform = { path = "../../crates/uc-platform", optional = true }
uuid = { version = "1.10.0", features = ["v4"], optional = true }

# --- Always-on deps ---------------------------------------------------------
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
base64 = "0.22"
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
console = "0.15"
indicatif = "0.17"
# Themed Confirm / Input prompts. `default-features = false` drops the
# `editor` and `password` extras — we keep `ui::password` (hand-rolled
# masked-feedback renderer) so the LAN-risk and label/username prompts
# are the only consumers.
dialoguer = { version = "0.11", default-features = false }
libc = "0.2"
hostname = "0.4"
# Installs the default `rustls` crypto provider process-wide at `main()`
# start — reqwest consumes rustls 0.23+, which now requires an explicit
# `CryptoProvider` before the first TLS handshake.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
axum = { version = "0.7", features = ["ws", "tokio", "http1", "http2"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }

[lints]
workspace = true
