[package]
name = "uc-daemon"
version.workspace = true
license.workspace = true
edition = "2021"
description = "GUI-agnostic daemon runtime (ADR-008); hosts the uniclipd binary"

[lib]
name = "uc_daemon"
path = "src/lib.rs"

[[bin]]
name = "uniclipd"
path = "src/main.rs"

[dependencies]
uc-application = { path = "../../crates/uc-application" }
uc-core = { path = "../../crates/uc-core" }
uc-bootstrap = { path = "../../crates/uc-bootstrap" }
uc-infra = { path = "../../crates/uc-infra" }
uc-platform = { path = "../../crates/uc-platform", features = ["test-helpers"] }
uc-observability = { path = "../../crates/uc-observability" }
uc-daemon-contract = { path = "../../crates/uc-daemon-contract" }
uc-daemon-local = { path = "../../crates/uc-daemon-local" }
uc-webserver = { path = "../../crates/uc-webserver" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
anyhow = "1.0"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# macOS: the headless daemon loads AppKit (for `NSPasteboard`) and must then
# demote its activation policy so it never shows a (forever-bouncing) Dock tile.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder"] }

[dev-dependencies]
uc-daemon-local = { path = "../../crates/uc-daemon-local", features = ["test-helpers"] }
tempfile = "3"
chrono = { version = "0.4", default-features = true }
mockall = "0.13"

[lints]
workspace = true
