[package]
name = "uc-daemon-client"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Daemon HTTP and WebSocket client for UniClipboard"

[lib]
name = "uc_daemon_client"
path = "src/lib.rs"

[dependencies]
# Workspace crates
uc-core = { path = "../uc-core" }
uc-daemon-contract = { path = "../uc-daemon-contract" }
# ADR-008 P5-0: depend on the thin process-management crate instead of
# uc-daemon-local. This severs the uc-application → uc-infra → iroh/diesel edge
# from the daemon-client stack — the only symbols this crate used from
# uc-daemon-local were socket::{resolve_daemon_http_addr, resolve_daemon_token_path},
# both of which now live in uc-daemon-process.
uc-daemon-process = { path = "../uc-daemon-process" }

# HTTP + WebSocket
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
tokio-tungstenite = "0.24"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL parsing
url = "2"

# Error handling + logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
