[package]
name = "uc-infra"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Infrastructure utilities and shared components for UniClipboard"

[features]
default = []
# Phase 94 / Pitfall 3 — disables `IrohNodeBuilder::bind` 的 OnceCell 单进程
# 守护，让下游 crate 的 e2e 测试在同 binary 内多次 bind sponsor + joiner
# endpoint。`#[cfg(test)]` 只对正在 `cargo test` 的 crate 生效，不传递到
# 依赖；下游 e2e（如 uc-bootstrap/tests/slice*_e2e.rs）必须显式启用此 feature
# 来 elide 守护。**production build 严禁启用此 feature**，否则 Pitfall 3
# 结构性防御失效。见 src/network/iroh/node.rs 上的 BIND_LOCK doc comment。
test-util = []

[dependencies]
# ===== Workspace crates =====
uc-core = { path = "../uc-core" }
# Directory-layout authority: config-migration reads `is_portable()` to record
# the bundle's source storage mode.
uc-app-paths = { path = "../uc-app-paths" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Stream consumption for iroh-blobs Downloader progress events
futures-util = "0.3"

# Enumerate local network interfaces (IP + netmask) at startup so the iroh
# AddrFilter callback can decide whether a peer candidate is reachable via
# direct LAN (suppressing hairpin-NAT-via-public-IP path oscillation).
# Cross-platform: getifaddrs on Unix, GetAdaptersAddresses on Windows.
if-addrs = "0.13"

# ===== 数据库 =====
diesel = { version = "2.3.5", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] } # ORM数据库框架
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
libsqlite3-sys = { version = "0.35", features = ["bundled"] }    # SQLite系统库绑定
diesel_migrations = { version = "2.2.0", features = ["sqlite"] } # Diesel迁移工具

# Async runtime (for mpsc channels in ports)
tokio = { version = "1", features = [
    "sync",
    "fs",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
] }

tracing = "0.1"
argon2 = "0.5.3"
base64 = "0.22"
subtle = "2.5.0"
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
# Memory hygiene: zero out MasterKey / Kek bytes when dropped so residual key
# material does not linger in heap/stack pages after lock/clear/refresh paths.
zeroize = { version = "1.8.2", features = ["derive"] }
blake3 = "1.8.2"
hex = "0.4.3"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
base32 = "0.5"
unicode-normalization = "0.1"
unicode-segmentation = "1"
url = "2"
config = "0.15.19"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff"] }
zstd = { version = "0.13", features = ["zstdmt"] }
# SpoolManager 用 IndexMap 维护 insertion-ordered 条目，做 O(1) 容量计数 +
# FIFO eviction。需要稳定的迭代顺序来表达 "evict 最旧未完成 staged" 语义，
# 普通 HashMap 做不到。
indexmap = "2"

# ===== Network stack (iroh + rendezvous HTTP) =====
iroh = { version = "1.0.0-rc.1" }
# mDNS LAN discovery (swarm-discovery TXT records over LAN multicast) so two
# peers on the same Wi-Fi advertise their LAN IPs to each other directly.
# Extracted from iroh core into a standalone crate in iroh 1.0.0-rc.1.
# UniClipboard#486 §三 B.
iroh-mdns-address-lookup = "0.3"
iroh-blobs = "0.102"
# Direct dep so pairing's own mDNS publisher/resolver can spin up window-
# scoped `Discoverer` instances on a separate service name from iroh's
# `_irohv1._udp.local` peer-discovery flow. We can't reuse iroh's
# `MdnsAddressLookup` because it is bind-time fixed to the shared Endpoint
# and has no lifecycle hook for "announce only while a pairing code is
# pending."
swarm-discovery = "0.6.0-alpha.2"
# (`if-addrs` is already declared elsewhere in this manifest; pairing
# publishers/resolvers reuse that same version.)
# 直接依赖 iroh-relay 0.98 以使用其 ClientBuilder 做"中继可达性探测"。
# iroh 本身只 re-export 了 `dns`/`RelayMap`,没有暴露 `client` 模块。
# default features 已经带上 `tls-ring`,与 iroh 自身保持一致。
iroh-relay = "1.0.0-rc.1"
# 用于持有 ClientBuilder 需要的 `ClientConfig`。版本对齐 iroh / iroh-relay
# 通过 cargo tree 已锁定到 0.23 主线,这里不重复写 default-features = false。
rustls = "0.23"
iroh-tickets = "1.0.0-rc.1"
# iroh 0.97 forked quinn-proto into noq-proto (Custom Transports & noq).
# Used solely to reach `congestion::Bbr3Config` when wiring the QUIC
# TransportConfig — iroh re-exports the trait but not the BBR factory itself.
noq-proto = "1.0.0-rc.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
# Slice 1 pairing session wire codec — binary, compact, serde-compatible.
postcard = { version = "1", features = ["use-std"] }
# Slice 2 Phase 2 clipboard wire codec — carry zero-copy ciphertext across
# the stream/facade boundary without extra clones. Same crate uc-core already
# pulls in on its own port contracts.
bytes = "1.7"
# Mobile-sync v1 LAN interface enumeration (`NetworkInterfaceLanProbe`).
# Cross-platform wrapper over getifaddrs / GetAdaptersAddresses; we only
# read IPv4 addresses + interface name, no other features pulled in.
network-interface = "2.0"
# Config-migration bundle: pack/unpack the plaintext archive that gets sealed
# inside a `.ucbundle`. Plain (uncompressed) tar — no compression layer, so the
# AEAD ciphertext does not leak archive structure through compression ratios.
tar = "0.4"

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
mockall = "0.13"
wiremock = "0.6"

[lints]
workspace = true
