[package]
name = "uc-mobile-proto"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Pure mobile-sync wire-protocol codec leaf crate (connect-uri)"
# Leaf crate: pure mobile-sync wire protocol codec (connect-uri today; more to
# follow). Zero internal workspace deps — depends only on small pure-codec
# crates so it can compile to iOS/Android targets and be shared by the desktop
# daemon and a future `uc-mobile` FFI crate. See
# .planning/research/uc-mobile-spike-plan.md.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
base64 = "0.22"
url = "2"
# Goal-B M1 additions — all small pure-codec crates, keeping leaf status:
# sha2: SyncClipboard content hashing (uppercase hex, spec §4.1/4.2)
sha2 = "0.10"
# unicode-segmentation: the 10240 long-text threshold counts GRAPHEMES
# (Swift String.count), not bytes or code points (spec §3.4)
unicode-segmentation = "1"
# chrono: ISO-8601 with fractional seconds, both `Z` and `+00:00` (spec §3.6)
chrono = { version = "0.4", default-features = false, features = ["std"] }

[lints]
workspace = true
