# FFI boundary crate for the mobile spike (B1/B2). Wraps `uc-mobile-proto`
# behind UniFFI so iOS/Android can call shared Rust logic. See
# .planning/research/uc-mobile-spike-plan.md.
#
# uniffi is pinned EXACTLY (spike plan §5): bindgen output and the Swift/Kotlin
# runtime shims must come from the same version, or the generated bindings
# silently drift from the compiled scaffolding.

[package]
name = "uc-mobile"
# Independent version line (goal-B build/release decision D1): uc-mobile is the
# mobile-only FFI artifact, released as `uc-mobile-v{version}` xcframework on a
# cadence decoupled from the desktop app's `v*` releases. This version IS the
# single source of truth for the published xcframework / SwiftPM binaryTarget.
# Bump it here, then run the `build-mobile-core` workflow to cut a release.
# (uc-mobile-proto stays on `version.workspace = true` — it is shared with the
# desktop daemon graph via uc-application and ships under the desktop version.)
version = "0.1.0"
license.workspace = true
edition = "2021"
description = "UniFFI boundary crate exposing shared Rust to iOS/Android (mobile spike)"

[lib]
# staticlib: linked into the iOS xcframework. cdylib: host dylib used by
# uniffi-bindgen library mode to extract metadata. lib: unit tests.
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
# Bindgen CLI entrypoint (library mode). Feature-gated so the plain
# workspace build does not pull clap/uniffi_bindgen into every PR check:
#   cargo run -p uc-mobile --features bindgen-cli --bin uniffi-bindgen -- \
#     generate --library target/debug/libuc_mobile.dylib --language swift ...
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["bindgen-cli"]

[features]
bindgen-cli = ["uniffi/cli"]

[dependencies]
uc-mobile-proto = { path = "../uc-mobile-proto" }
uniffi = "=0.31.1"
thiserror = "2.0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Same ring-pinned rustls stack as apps/cli (spike plan seam 1): reqwest
# brings rustls with NO provider feature, so the provider must be installed
# process-wide via uc_mobile_init(); pinning `ring` here keeps aws-lc-rs (and
# its cmake/clang native build) out of the mobile dependency tree — the
# build-ios-xcframework.sh script asserts `cargo tree -i aws-lc-rs` is empty.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# current_thread runtime hosted on a dedicated thread (iOS extension jetsam
# budget rules out the multi-thread runtime; spike plan §4).
tokio = { version = "1", features = ["rt", "time", "sync"] }
url = "2"
# Already in the build graph via uc-mobile-proto; used here only to convert the
# FFI surface's epoch-millis timestamps to/from the proto chrono types
# (HistoryQuery / HistoryRecord). Pinned identically to the proto crate.
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
axum = { version = "0.7", features = ["tokio", "http1", "json"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt", "macros", "net", "time", "sync", "io-util"] }

[lints]
workspace = true
